<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeTravels</string>
    <string name="track_label">Track My Route</string>
    <string name="route_label">Plan a Safe Route</string>
    <string name="made_it_label">Made It!</string>
    <string name="send_to_friend_label">Send</string>
    <string name="danger_label">DANGER</string>
    <string name="danger_message">I need help.</string>
    <string name="track_this_route_label">Track This Route</string>
    <string name="get_text_message_number">Enter the phone number of recipient</string>
    <string name="message_label">Message</string>
    <string name="track_me_message">Please Track Me</string>
    <string name="send_text_message_label">Send Text</string>
    <string name="MapAPIKey">0JHLvaWdrY-BXoN3EtwhK1ItpMPhkLj1prwYw-w</string>
    <string name="MapAPIKeyDebug">0JHLvaWdrY-Cye9pmNQ_AZg0bkdEuLeJlZTDW-g</string>
    <string name="made_it_text_message">I made it home safe!</string>
    <string name="fingerprint">5F:81:23:98:C6:C2:4E:87:61:31:35:2D:37:41:95:02</string>
    <string name="no_info">No Information</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="loading">Loading...</string>
    <string name="plan_label">Plan a Route</string>
    <string name="stoptracking_label">Stop Tracking</string>
    <string name="about_text">SafeTravels is an app for users who are concerned about their safety while traveling 
and wish to share their progress home with others. You will be able to plan a route through public transportation based 
on how safe the route is. With SafeTravels, you will also be able to track   
your route and share this information with a friend.</string>
    <string-array name="crimes_array">
    	<item>Aggravated Assault</item>
    	<item>Murder</item>
    	<item>Robbery</item>
    	<item>Simple Assault</item>
    	<item>Disturbing the Peace</item>
    	<item>Narcotics</item>
    	<item>Alcohol</item>
    	<item>Prostitution</item>
    	<item>Theft</item>
    	<item>Vehicle Theft</item>
    	<item>Vandalism</item>
    	<item>Burglary</item>
    	<item>Arson</item>
    </string-array>
    <string name="menu_see_on_map">See On Map</string>
</resources>
