<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  	 xmlns:android="http://schemas.android.com/apk/res/android"
  	 android:id="@+id/frame"
  	 android:orientation="vertical"
  	 android:layout_width="fill_parent"
  	 android:layout_height="fill_parent"
  	 android:background="@drawable/background">
	<com.google.android.maps.MapView
      	android:id="@+id/map"
      	android:apiKey="@string/MapAPIKey"
     	android:layout_width="fill_parent"
    	android:layout_height="350dip"
      	android:clickable="true" />
	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="*">
			<Button
				android:id="@+id/made_it_button"
				android:text="@string/made_it_label"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:typeface="sans"
				android:layout_marginTop= "20dip"			
				android:layout_marginBottom="10dip"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/littlebutton"/>
			<Button
				android:id="@+id/send_to_friend_button"
				android:text="@string/send_to_friend_label"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:typeface="sans"
				android:layout_marginTop= "20dip"			
				android:layout_marginBottom="10dip"
				android:layout_gravity="center_horizontal"
				android:background="@drawable/littlebutton"/>
		</TableRow>
	</TableLayout>
</LinearLayout>
